--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
